--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 Laudantium voluptatibus non perspiciatis repellendus ipsum delectus fugiat rem exercitationem, 
                 temporibus suscipit nesciunt libero pariatur. Inventore, consequuntur ipsum?</p>
         </article>
-        <img src="/img/coffeeShopInterior.jpg" alt="coffee shop interior">
+        <img src="img/coffeeShopInterior.jpg" alt="coffee shop interior">
     </main>
 
     <section class="reservation">
