Few css styles on index.html

--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VH Coffee</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital@1&display=swap" rel="stylesheet">
+    <title>vh coffee</title>
 </head>
 <body>
     <header>
-        <h1>VH Coffee</h1>
+        <h1>vh coffee</h1>
     </header>
 
     <section class="banner">
-        <img src="img/coffeeBanner.jpg" alt="coffee shop banner">
-        <div class="welcome">
+        <img src="img/coffeeBanner2.jpg" alt="coffee shop banner">
+        <!-- <div class="welcome">
             <h2>Welcome to <br><span>vh coffee</span></h2>
-        </div>
+        </div> -->
     </section>
 
     <nav class="main-nav">
@@ -23,7 +27,7 @@
         contact us 
         where-->
         <ul>
-            <li><a href="#" class="">Home</a></li>
+            <!-- <li><a href="#" class="">Home</a></li> -->
             <li><a href="#menu" class="">Menu</a></li>
             <li><a href="#aboutUs" class="">About Us</a></li>
             <li><a href="#contactUs" class="">Contact Us</a></li>
@@ -39,7 +43,7 @@
                 Laudantium voluptatibus non perspiciatis repellendus ipsum delectus fugiat rem exercitationem, 
                 temporibus suscipit nesciunt libero pariatur. Inventore, consequuntur ipsum?</p>
         </article>
-        <img src="img/coffeeShopInterior.jpg" alt="coffee shop interior">
+        <img src="img/coffeeShopInterior.jpg" style="width: 100%;" alt="coffee shop interior">
     </main>
 
     <section class="reservation">
