--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         contact us 
         where-->
         <ul>
-            <!-- <li><a href="#" class="">Home</a></li> -->
+            <li><a href="#" class="">Home</a></li>
             <li><a href="#menu" class="">Menu</a></li>
             <li><a href="#aboutUs" class="">About Us</a></li>
             <li><a href="#contactUs" class="">Contact Us</a></li>
