css styles on nav

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
         </ul>
     </nav>
 
+    <!-- <section class="banner">
+        <img src="img/coffeeBanner2.jpg" alt="coffee shop banner">
+    </section> -->
+
     <main>
         <article>
             <h3>Refill your mind</h3>
