Styles on footer and section.reservation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital@1&display=swap" rel="stylesheet">
     <title>vh coffee</title>
+    <link rel="icon" type="image/x-icon" href="img/twitter.png"> 
+        <!-- temporary icon -->
 </head>
 <body>
     <header>
@@ -69,6 +71,9 @@
 
     <footer>
         <p class="copyright">Copyright 2022 vh</p>
+        <a href="https://github.com/vhillyjay"><img src="img/github.png" alt="GitHub" width="20" height="20"></a>
+        <a href="https://facebook.com/vhillyjay"><img src="img/facebook.png" alt="GitHub" width="20" height="20"></a>
+        <a href="https://twitter.com/vhillyjay"><img src="img/twitter.png" alt="GitHub" width="20" height="20"></a>
     </footer>
     
 </body>
