Contact us and footer updates

--- a/index.html
+++ b/index.html
@@ -115,14 +115,18 @@
             Doloremque, repudiandae corrupti molestias maiores ex minima consequuntur ipsam.</p>
 
         <form action="">
-            <input type="text" name="fullName" id="fullName" placeholder="Full Name" size="50" required><br>
-            <input type="number" name="contactNumber" id="contactNumber" placeholder="Contact Number" class="no-arrow" size="50" required><br>
-            <input type="email" name="emailAddress" id="emailAddress" placeholder="Email Address"><br>
-            <input type="text" name="contactSubject" id="contactSubject" placeholder="Subject"><br>
-            <textarea id="contactMessage" name="contactMessage" rows="4" cols="50">
-                Please type your message..
-            </textarea>
-            <input type="submit" name="reserveSeat" id="reserveSeat" value="Reserve Seat">
+            <!-- Full Name: <br> -->
+            <input type="text" name="fullName" id="fullName" placeholder="Full Name" size="154" required><br>
+            <!-- Contact Number: <br> -->
+            <input type="number" name="contactNumber" id="contactNumber" placeholder="Contact Number" class="no-arrow" required><br>
+            <!-- Email Address: <br> -->
+            <input type="email" name="emailAddress" id="emailAddress" placeholder="Email Address" size="154"><br>
+            <!-- Subject: <br> -->
+            <input type="text" name="contactSubject" id="contactSubject" placeholder="Subject" size="154"><br>
+            <!-- Message: <br> -->
+            <textarea name="" id="" cols="154" placeholder="Enter your message"></textarea><br>
+            <input type="checkbox" name="" id="" required> By clicking submit, you agree to our Privacy Policy. The vh coffee will use your personal data to help us respond and contact you regarding your inquiries and/or concerns. For more information on how we use your data, visit our Privacy Policy *<br>
+            <input type="submit" name="reserveSeat" id="reserveSeat" value="Send Message">
         </form>
     </div>
 
@@ -130,38 +134,73 @@
         <div class="grid-container">
             <div class="grid-item footer-logo">
                 <!-- logo inside and name -->
-                <a href="index.html"><img src="img/coffee-beans.png" style="width: 50px;" alt="vh coffee logo">vh coffee</a>
+                <a href="index.html"><img src="img/coffee-beans.png" style="width: 50px;" alt="vh coffee logo">
+                    
+                </a>
             </div>
-            <div class="grid-item">
-                other info
-            </div>
-            <div class="grid-item">
-                other info2
-            </div>
-            <div class="grid-item footer-contacts">
-                <!-- contact us info and all -->
+            <div class="grid-item affiliations">
+                <div class="grid-item-2 grid-title">
+                    <strong style="font-size: 20px;">Affiliations</strong>
+                </div>
                 <ul>
-                    <li><a href="#">Lorem ipsum</a></li>
-                    <li><a href="#">Lorem ipsum</a></li>
-                    <li><a href="#">Lorem ipsum</a></li>
+                    <li><a href="newpage.html">Affiliations Link1</a></li>
+                    <li><a href="newpage.html">Affiliations Link2</a></li>
                 </ul>
             </div>
-            <div class="grid-item">
-                other info3
+            <div class="grid-item terms-of-use">
+                <div class="grid-item-2 grid-title">
+                    <strong style="font-size: 20px;">Terms of Use</strong>
+                </div>
+                <ul>
+                    <li><a href="newpage.html">Terms of Use Link1</a></li>
+                    <li><a href="newpage.html">Terms of Use Link2</a></li>
+                    <li><a href="newpage.html">Terms of Use Link3</a></li>
+                </ul>
             </div>
-            <div class="grid-item">
-                other info4
+            <div class="grid-item other-contacts">
+                <!-- contact us info and all -->
+                <div class="grid-item-2 grid-title">
+                    <strong style="font-size: 20px;">Other Contacts</strong>
+                </div>
+                <ul>
+                    <li><a href="newpage.html">Other Contact Link1</a></li>
+                    <li><a href="newpage.html">Other Contact Link2</a></li>
+                    <li><a href="newpage.html">Other Contact Link3</a></li>
+                </ul>
             </div>
-            <!-- <a href="index.html"><img src="img/coffee-beans.png" style="width: 50px;" alt="vh coffee logo"></a> -->
-            <!-- <ul>
-                <li><a href="#">Lorem ipsum</a></li>
-                <li><a href="#">Lorem ipsum</a></li>
-                <li><a href="#">Lorem ipsum</a></li>
-            </ul> -->
+            <div class="grid-item customer-care">
+                <div class="grid-item-2 grid-title">
+                    <strong style="font-size: 20px;">Customer Care</strong>
+                </div>
+                <ul>
+                    <li><a href="newpage.html">Customer Care Link1</a></li>
+                    <li><a href="newpage.html">Customer Care Link2</a></li>
+                    <li><a href="newpage.html">Customer Care Link3</a></li>
+                    <li><a href="newpage.html">Customer Care Link4</a></li>
+                    <li><a href="newpage.html">Customer Care Link5</a></li>
+                </ul>
+            </div>
+
+            <div class="grid-item">
+                <!-- empty grid -->
+            </div>
+
             <div class="grid-item footer-social">
-                <a href="https://github.com/vhillyjay"><img src="img/github.png" alt="GitHub" width="20" height="20"></a>
-                <a href="https://facebook.com/vhillyjay"><img src="img/facebook.png" alt="GitHub" width="20" height="20"></a>
-                <a href="https://twitter.com/vhillyjay"><img src="img/twitter.png" alt="GitHub" width="20" height="20"></a>
+                <div class="grid-item-2 footer-social-github">
+                    <a target="_blank" href="https://github.com/vhillyjay"><img src="img/github.png" alt="GitHub" width="25" height="25"></a>
+                </div>
+                <div class="grid-item-2 footer-social-facebook">
+                    <a target="_blank" href="https://facebook.com/vhillyjay"><img src="img/facebook.png" alt="Facebook" width="25" height="25"></a>
+                </div>
+                <div class="grid-item-2 footer-social-twitter">
+                    <a target="_blank" href="https://twitter.com/vhillyjay"><img src="img/twitter.png" alt="Twitter" width="25" height="25"></a>
+                </div>
+                <div class="grid-item-2 footer-social-instagram">
+                    <a target="_blank" href="https://instagram.com/vhillyjay"><img src="img/instagram.png" alt="Instagram" width="25" height="25"></a>
+                </div>
+                <!-- <a href="https://github.com/vhillyjay"><img src="img/github.png" alt="GitHub" width="20" height="20"></a> -->
+                <!-- <a href="https://facebook.com/vhillyjay"><img src="img/facebook.png" alt="GitHub" width="20" height="20"></a> -->
+                <!-- <a href="https://twitter.com/vhillyjay"><img src="img/twitter.png" alt="GitHub" width="20" height="20"></a> -->
             </div>
         </div>
         <div>
