footer logo fix

--- a/index.html
+++ b/index.html
@@ -124,19 +124,24 @@
             <!-- Subject: <br> -->
             <input type="text" name="contactSubject" id="contactSubject" placeholder="Subject" size="154"><br>
             <!-- Message: <br> -->
-            <textarea name="" id="" cols="154" placeholder="Enter your message"></textarea><br>
-            <input type="checkbox" name="" id="" required> By clicking submit, you agree to our Privacy Policy. The vh coffee will use your personal data to help us respond and contact you regarding your inquiries and/or concerns. For more information on how we use your data, visit our Privacy Policy *<br>
-            <input type="submit" name="reserveSeat" id="reserveSeat" value="Send Message">
+            <textarea name="contactMessage" id="contactMessage" cols="154" placeholder="Enter your message"></textarea><br>
+            <input type="checkbox" name="messageCheckBox" id="messageCheckBox" required> By clicking submit, you agree to our Privacy Policy. The vh coffee will use your personal data to help us respond and contact you regarding your inquiries and/or concerns. For more information on how we use your data, visit our Privacy Policy *
+            <br><br>
+            <input type="submit" name="reserveSeat" id="reserveSeat" value="Send Message" class="contactSubmit contactSubmit2">
         </form>
     </div>
 
     <footer class="footer" id="footer">
         <div class="grid-container">
-            <div class="grid-item footer-logo">
+            <div class="grid-item business-name-logo">
                 <!-- logo inside and name -->
-                <a href="index.html"><img src="img/coffee-beans.png" style="width: 50px;" alt="vh coffee logo">
-                    
-                </a>
+                <div class="grid-item-2 grid-logo">
+                    <a href="index.html"><img src="img/coffee-beans.png" style="width: 50px;" alt="vh coffee logo"></a>
+                </div>
+                <div class="grid-item-2 grid-name">
+                    <h3><a href="index.html" style="color: black;">vh coffees</a></h3>
+                    <!-- <a href="index.html">vh coffee</a> -->
+                </div>
             </div>
             <div class="grid-item affiliations">
                 <div class="grid-item-2 grid-title">
