--- a/index.html
+++ b/index.html
@@ -26,18 +26,37 @@
 <body>
     <header class="header" id="header">
         <!-- <h1>vh coffee</h1> -->
-        <div>
+        <div class="header-container">
+            <div class="header-logo">
+                <!-- <a href="index.html"><img src="img/coffee-beans.png" style="width: 50px;" alt="vh coffee logo"></a> -->
+            </div>
+            <div class="header-title">
+                <h3><a href="index.html" style="color: black;">vh coffee</a></h3>
+                <!-- <div class="header-nav">
+                    <a href="#" class="">Home</a>
+                    <a href="#aboutUs" class="">About Us</a>
+                    <a href="#menu" class="">Menu</a>
+                    <a href="#whereToFind" class="">Where</a>
+                    <a href="#contactUs" class="">Contact Us</a>
+                </div> -->
+            </div>
             <div class="header-nav">
-                <!-- <h1>vhcoffee</h1> -->
+                <a href="#" class="">Home</a>
+                <a href="#aboutUs" class="">About Us</a>
+                <a href="#menu" class="">Menu</a>
+                <a href="#whereToFind" class="">Where</a>
+                <a href="#contactUs" class="">Contact Us</a>
+                
+            </div>
+            <!-- <div class="header-nav">
                 <ul>
-                    <li><h1>vhcoffee</h1></li>
                     <li><a href="#" class="">Home</a></li>
                     <li><a href="#aboutUs" class="">About Us</a></li>
                     <li><a href="#menu" class="">Menu</a></li>
                     <li><a href="#whereToFind" class="">Where</a></li>
                     <li><a href="#contactUs" class="">Contact Us</a></li>
                 </ul>
-            </div>
+            </div> -->
         </div>
     </header>
 
@@ -120,7 +139,7 @@
             <li><img src="img/espresso.jpg" style="width:85%;" alt=""><br>
                 <h4>Espresso</h4>
                 <hr>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae aliquam voluptates ipsa ducimus enim harum magnam quod saepe esse laboriosam quidem odio temporibus reiciendis ad ratione ipsum, beatae necessitatibus consequatur?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora dicta voluptatem id magni. Quis, harum doloremque nemo ab a nam ducimus illum deleniti laborum dolorum nostrum labore accusantium perferendis. Libero.</p>
             </li>
             <li><img src="img/cappuccino.jpg" style="width:85%;" alt=""><br>
                 <h4>Cappuccino</h4>
@@ -179,7 +198,7 @@
                     <a href="index.html"><img src="img/coffee-beans.png" style="width: 50px;" alt="vh coffee logo"></a>
                 </div>
                 <div class="grid-item-2 grid-name">
-                    <h3><a href="index.html" style="color: black;">vh coffees</a></h3>
+                    <h3><a href="index.html" style="color: black;">vh coffee</a></h3>
                     <!-- <a href="index.html">vh coffee</a> -->
                 </div>
             </div>
