--- a/index.html
+++ b/index.html
@@ -26,12 +26,23 @@
 <body>
     <header class="header" id="header">
         <!-- <h1>vh coffee</h1> -->
-        <div class="header-container">
+        <!-- <div class="header-container"> -->
             <div class="header-logo">
                 <!-- <a href="index.html"><img src="img/coffee-beans.png" style="width: 50px;" alt="vh coffee logo"></a> -->
             </div>
             <div class="header-title">
+                <a href="index.html"><img src="img/coffee-beans.png" style="width: 50px;" alt="vh coffee logo"></a>
                 <h3><a href="index.html" style="color: black;">vh coffee</a></h3>
+                    <div class="header-navigation">
+                        <ul>
+                            <li><a href="#" class="">Home</a></li>
+                            <li><a href="#aboutUs" class="">About Us</a></li>
+                            <li><a href="#menu" class="">Menu</a></li>
+                            <li><a href="#whereToFind" class="">Where</a></li>
+                            <li><a href="#contactUs" class="">Contact Us</a></li>
+                        </ul>
+                    </div>
+                <!-- vh coffee -->
                 <!-- <div class="header-nav">
                     <a href="#" class="">Home</a>
                     <a href="#aboutUs" class="">About Us</a>
@@ -39,14 +50,6 @@
                     <a href="#whereToFind" class="">Where</a>
                     <a href="#contactUs" class="">Contact Us</a>
                 </div> -->
-            </div>
-            <div class="header-nav">
-                <a href="#" class="">Home</a>
-                <a href="#aboutUs" class="">About Us</a>
-                <a href="#menu" class="">Menu</a>
-                <a href="#whereToFind" class="">Where</a>
-                <a href="#contactUs" class="">Contact Us</a>
-                
             </div>
             <!-- <div class="header-nav">
                 <ul>
@@ -57,7 +60,7 @@
                     <li><a href="#contactUs" class="">Contact Us</a></li>
                 </ul>
             </div> -->
-        </div>
+        <!-- </div> -->
     </header>
 
     <div class="container">
