top nav to right side

--- a/index.html
+++ b/index.html
@@ -33,33 +33,15 @@
             <div class="header-title">
                 <a href="index.html"><img src="img/coffee-beans.png" style="width: 50px;" alt="vh coffee logo"></a>
                 <h3><a href="index.html" style="color: black;">vh coffee</a></h3>
-                    <div class="header-navigation">
-                        <ul>
-                            <li><a href="#" class="">Home</a></li>
-                            <li><a href="#aboutUs" class="">About Us</a></li>
-                            <li><a href="#menu" class="">Menu</a></li>
-                            <li><a href="#whereToFind" class="">Where</a></li>
-                            <li><a href="#contactUs" class="">Contact Us</a></li>
-                        </ul>
-                    </div>
-                <!-- vh coffee -->
-                <!-- <div class="header-nav">
-                    <a href="#" class="">Home</a>
-                    <a href="#aboutUs" class="">About Us</a>
-                    <a href="#menu" class="">Menu</a>
-                    <a href="#whereToFind" class="">Where</a>
-                    <a href="#contactUs" class="">Contact Us</a>
-                </div> -->
+                    <ul>
+                        <li><a href="#" style="color: black;">Home</a></li>
+                        <li><a href="#aboutUs" class="" style="color: black;">About Us</a></li>
+                        <li><a href="#menu" class="" style="color: black;">Menu</a></li>
+                        <li><a href="#whereToFind" class="" style="color: black;">Where</a></li>
+                        <li><a href="#contactUs" class="" style="color: black;">Contact Us</a></li>
+                    </ul>
             </div>
-            <!-- <div class="header-nav">
-                <ul>
-                    <li><a href="#" class="">Home</a></li>
-                    <li><a href="#aboutUs" class="">About Us</a></li>
-                    <li><a href="#menu" class="">Menu</a></li>
-                    <li><a href="#whereToFind" class="">Where</a></li>
-                    <li><a href="#contactUs" class="">Contact Us</a></li>
-                </ul>
-            </div> -->
+            
         <!-- </div> -->
     </header>
 
@@ -178,15 +160,15 @@
 
         <form action="">
             <!-- Full Name: <br> -->
-            <input type="text" name="fullName" id="fullName" placeholder="Full Name" size="154" required><br>
+            <input type="text" name="fullName" id="fullName" placeholder="Full Name" size="170" required><br>
             <!-- Contact Number: <br> -->
             <input type="number" name="contactNumber" id="contactNumber" placeholder="Contact Number" class="no-arrow" required><br>
             <!-- Email Address: <br> -->
-            <input type="email" name="emailAddress" id="emailAddress" placeholder="Email Address" size="154"><br>
+            <input type="email" name="emailAddress" id="emailAddress" placeholder="Email Address" size="170"><br>
             <!-- Subject: <br> -->
-            <input type="text" name="contactSubject" id="contactSubject" placeholder="Subject" size="154"><br>
+            <input type="text" name="contactSubject" id="contactSubject" placeholder="Subject" size="170"><br>
             <!-- Message: <br> -->
-            <textarea name="contactMessage" id="contactMessage" cols="154" placeholder="Enter your message"></textarea><br>
+            <textarea name="contactMessage" id="contactMessage" cols="170" placeholder="Enter your message"></textarea><br>
             <input type="checkbox" name="messageCheckBox" id="messageCheckBox" required> By clicking submit, you agree to our Privacy Policy. The vh coffee will use your personal data to help us respond and contact you regarding your inquiries and/or concerns. For more information on how we use your data, visit our Privacy Policy *
             <br><br>
             <input type="submit" name="reserveSeat" id="reserveSeat" value="Send Message" class="contactSubmit contactSubmit2">
